[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/inventory/InventorySystem.gd" type="Script" id=1]
[ext_resource path="res://scenes/PlayerEquipment.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/itemSlotDescription.tscn" type="PackedScene" id=4]

[node name="inventorySystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
inventoriesPath = NodePath("inventories")
mainInventoryPath = NodePath("inventories/equipment")

[node name="inventories" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="equipment" parent="inventories" instance=ExtResource( 2 )]
margin_left = 83.0778
margin_top = 34.3852
margin_right = 422.078
margin_bottom = 278.384
inventoryDisplayName = "Equipment"

[node name="chest" parent="inventories" instance=ExtResource( 3 )]
margin_left = 118.844
margin_top = 289.831
margin_right = 372.844
margin_bottom = 535.831
inventoryDisplayName = "Inventory"
inventorySize = 20
columns = 5
weightEnabled = false
maxWeight = 1e+007

[node name="blocker" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="itemSlotDescription" parent="." instance=ExtResource( 4 )]
visible = false

[node name="descriptionField" type="Control" parent="itemSlotDescription"]
margin_left = -14.2963
margin_top = -14.4043
margin_right = 327.704
margin_bottom = 218.596
mouse_filter = 1

[node name="draggenItem" type="TextureRect" parent="."]
visible = false
margin_left = -4.43213
margin_top = 1.10803
margin_right = 35.5679
margin_bottom = 41.108

[node name="chestPos" type="Control" parent="."]
margin_left = 551.151
margin_top = 125.779
margin_right = 551.151
margin_bottom = 125.779
mouse_filter = 1

[connection signal="mouse_exited" from="itemSlotDescription/descriptionField" to="." method="_on_descriptionField_mouse_exited"]
